# Project_DesktopPets_Hinata

./: CMakeLists.txt
include/: hinata.h
qrc/: main.qrc
script/: run_hinata.sh
src/: hinata.cpp  main.cpp
